; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ssltestlib.c_shutdown_ssl_connection.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ssltestlib.c_shutdown_ssl_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shutdown_ssl_connection(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @SSL_shutdown(i32* %5)
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @SSL_shutdown(i32* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @SSL_free(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @SSL_free(i32* %11)
  ret void
}

declare dso_local i32 @SSL_shutdown(i32*) #1

declare dso_local i32 @SSL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
